--- a/src/app/layouts/footer/footer.component.html
+++ b/src/app/layouts/footer/footer.component.html
@@ -15,7 +15,7 @@
                     <div class="items-inner">
                         <h6 class="items-title">Foods</h6>
                         <a [routerLink]="[ '/pricing' ]" class="item">Pricing</a>
-                        <a [routerLink]="[ '/pricing' ]" class="item">Menus</a>
+                        <a [routerLink]="[ '/foods' ]" class="item">Menus</a>
                     </div>
                     <a href="#!" class="item">Privacy Policy</a>
                 </div>
