--- a/src/app/pages/login/login.component.scss
+++ b/src/app/pages/login/login.component.scss
@@ -41,6 +41,12 @@
     }
     label{
         margin-bottom: 25px;
+        position: relative;
+        .danger-text{
+            position: absolute;
+            left: 20px;
+            bottom: -20px;
+        }
     }
     .btn-forgot{
         display: flex;
