--- a/src/app/pages/foods/foods.component.scss
+++ b/src/app/pages/foods/foods.component.scss
@@ -1,3 +1,4 @@
+//@import "~bootstrap/dist/css/bootstrap.css";
 @import "../../shared/styles/variables";
 
 .menus {
@@ -348,6 +349,38 @@
     //}
 }
 
+.counter{
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    margin-top: 10px;
+    h5{
+        width: 30px;
+        text-align: center;
+    }
+}
+
+.count-btn{
+    width: 20px;
+    height: 20px;
+    border: none;
+    outline: none;
+    font-size: 20px;
+    color: $titleText;
+    opacity: .8;
+    background: url('../../../assets/images/minus.svg') center/cover no-repeat transparent;
+    transition: all .2s ease;
+    &:hover{
+        opacity: 1;
+    }
+    &:disabled{
+        opacity: .6;
+    }
+    &:last-child{
+        background-image: url('../../../assets/images/plus.svg')
+    }
+}
+
 @media screen and (max-width: 414px) {
     .menu {
         padding: 0px 30px;
@@ -373,6 +406,7 @@
         }
         .menu-list {
             margin-top: 0;
+            height: 325px;
         }
         .sidebar-btns {
             justify-content: start;
@@ -426,7 +460,7 @@
         }
     }
     .product-desc {
-        height: 295px;
+        min-height: 295px;
         display: flex;
         flex-direction: column;
         align-items: flex-end;
@@ -454,3 +488,4 @@
         flex-wrap: wrap;
     }
 }
+
