--- a/src/app/pages/orders/orders.component.scss
+++ b/src/app/pages/orders/orders.component.scss
@@ -23,13 +23,37 @@
 
 .products{
     display: flex;
-    justify-content: space-between;
     flex-wrap: wrap;
 }
 
 .prod {
     width: 150px;
     margin-bottom: 40px;
+    margin-right: 50px;
+    position: relative;
+    &:nth-child(3n+3){
+        margin-right: 0;
+    }
+    .delete-prod{
+        width: 30px;
+        height: 30px;
+        outline: none;
+        border: 1px solid #d3d3d3;
+        border-radius: 50%;
+        background: url('../../../assets/images/close-cross.svg') center/10px no-repeat #fafafa;
+        box-shadow: 0 0 10px 0px #80808069;
+        position: absolute;
+        top: -10px;
+        right: -10px;
+        opacity: 0;
+        transition: all .2s ease;
+        &:hover{
+            background-color: #f3f3f3;
+        }
+    }
+    &:hover .delete-prod {
+        opacity: 1;
+    }
     .prod-img {
         width: 100%;
         height: 150px;
