--- a/src/app/pages/profile/profile.component.scss
+++ b/src/app/pages/profile/profile.component.scss
@@ -1,3 +1,19 @@
+//.control-sm{
+//    height: 35px;
+//    font-size: 14px;
+//}
+
+.card-data{
+    text-align: center;
+    padding: 0;
+    width: 70px;
+    margin-left: 10px;
+}
+
+.card-num{
+    width: 100%;
+}
+
 @media screen and (max-width: 414px) {
     form {
         padding: 0px 30px;
