--- a/src/app/pages/foods/foods.component.scss
+++ b/src/app/pages/foods/foods.component.scss
@@ -120,7 +120,7 @@
 //}
 
 ::-webkit-scrollbar {
-    width: 6px; 
+    width: 6px;
     background-color: transparent;
 }
 
@@ -349,35 +349,35 @@
     //}
 }
 
-.counter{
+.counter {
     display: flex;
     justify-content: flex-end;
     align-items: center;
     margin-top: 10px;
-    h5{
+    h5 {
         width: 30px;
         text-align: center;
     }
 }
 
-.count-btn{
+.count-btn {
     width: 20px;
     height: 20px;
     border: none;
     outline: none;
     font-size: 20px;
     color: $titleText;
-    opacity: .8;
-    background: url('../../../assets/images/minus.svg') center/cover no-repeat transparent;
-    transition: all .2s ease;
-    &:hover{
+    opacity: 0.8;
+    background: url("../../../assets/images/minus.svg") center/cover no-repeat transparent;
+    transition: all 0.2s ease;
+    &:hover {
         opacity: 1;
     }
-    &:disabled{
-        opacity: .6;
+    &:disabled {
+        opacity: 0.6;
     }
-    &:last-child{
-        background-image: url('../../../assets/images/plus.svg')
+    &:last-child {
+        background-image: url("../../../assets/images/plus.svg");
     }
 }
 
@@ -465,8 +465,8 @@
         flex-direction: column;
         align-items: flex-end;
         p {
-            height: 115px;
-            margin-bottom: 0 !important;
+            height: auto;
+            margin-bottom: 10px !important;
         }
         h4 {
             width: 125px;
@@ -475,6 +475,8 @@
             margin: 0px 0px 10px !important;
         }
         .product-footer-btns {
+            position: static;
+            margin-top: 10px;
             button:first-child {
                 border: none;
                 &:hover {
@@ -488,4 +490,3 @@
         flex-wrap: wrap;
     }
 }
-
