--- a/src/app/pages/orders/orders.component.html
+++ b/src/app/pages/orders/orders.component.html
@@ -1,5 +1,8 @@
 <article>
-    <div class="wrapper">
+    <div class="empty" *ngIf="emptyBasket">
+        <h3 class="text-center" >Basket Empty, go to <a class="" [routerLink]="[ '/foods' ]">Foods</a></h3> 
+    </div>
+    <div class="wrapper" *ngIf="!emptyBasket">
         <div class="products-wrapper">
             <div class="left">
                 <div class="product-title text-center">
@@ -42,7 +45,7 @@
                     <label class="label mb-3">
                         <div class="ico credit-card"></div>
                         <div class="d-flex ">
-                            <input type="text" class="control" placeholder="1111-1111-1111-1111" formControlName="cardNumber" mask='0000-000-0000-0000'>
+                            <input type="text" class="control" placeholder="1111-1111-1111-1111" formControlName="cardNumber" mask='0000-0000-0000-0000'>
                             <input type="text" class="control card-data" placeholder="11/11" formControlName="cardDate"
                             mask='00/00'>
                         </div>
