--- a/src/app/admin/admin-orders/admin-orders.component.html
+++ b/src/app/admin/admin-orders/admin-orders.component.html
@@ -1,1 +1,34 @@
-<p>admin-orders works!</p>
+<div class="container">
+    <div class="order" *ngFor="let o of orders; let i=index">
+        <div class="order-data d-flex mb-4">
+            <label class="label me-3">
+                <p>Name</p>
+                <input type="text" class="control" disabled [value]="o.name">
+            </label>
+            <label class="label me-3">
+                <p>Phone</p>
+                <input type="text" class="control" disabled [value]="o.phone">
+            </label>
+            <label class="label me-3">
+                <p>Address</p>
+                <input type="text" class="control" disabled [value]="o.address">
+            </label>
+        </div>
+        <div class="product d-flex mb-4">
+            <div class="prod" *ngFor="let p of o.products; let i=index">
+                <div class="prod-img" [style.backgroundImage]="'url('+p.images+')'"></div>
+                <p class="prod-name">{{ p.name }}</p>
+            </div>
+        </div>
+        <button class="btn done" (click)="openModal(template)">Done</button>
+        <ng-template #template>
+            <div class="modal-body text-center">
+                <p>The order will be deleted. Сontinue?</p>
+                <button type="button" class="btn btn-default" (click)="deleteOrder(o)">Yes</button>
+                <button type="button" class="btn btn-default" (click)="modalRef.hide()">No</button>
+            </div>
+        </ng-template>
+    </div>
+</div>
+
+
