--- a/src/app/admin/admin-product/admin-product.component.html
+++ b/src/app/admin/admin-product/admin-product.component.html
@@ -46,7 +46,7 @@
         </div>
         <div class="d-flex justify-content-end">
             <div class="btn btn-warning me-3" (click)="editFireProduct(p)">Edit</div>
-            <div class="btn btn-danger" (click)="deletaFireProduct(p)">Delete</div>
+            <div class="btn btn-danger" (click)="deleteFireProduct(p)">Delete</div>
         </div>
     </div>
 </div>
@@ -112,7 +112,11 @@
                             [ngClass]="{'danger': !validByControl('ingredients')}"></textarea>
                     </div>
                     <div class="d-flex">
-                        <div class="photo" [style.backgroundImage]="'url('+i+')'" *ngFor="let i of images"></div>
+                        <div class="photo" [style.backgroundImage]="'url('+i+')'" *ngFor="let i of images">
+                            <div class="delete-img" (click)="deleteImage(i)">
+                                <i class="bi bi-trash-fill" style="cursor: pointer;"></i>
+                            </div>
+                        </div>
                         <div class="input__wrapper" *ngIf="!checkUpload()">
                             <input name="file" type="file" name="file" id="input__file" class="input input__file" multiple (change)="uploadFile($event)">
                             <label for="input__file" class="input__file-button">
